fix(frontend): fix mobile navigation z-index

--- a/frontend/src/components/header/_header.scss
+++ b/frontend/src/components/header/_header.scss
@@ -144,6 +144,7 @@ $strip_gap: 0.5rem;
 
   .nav {
     position: absolute;
+    z-index: 100;
     top: 100%;
     left: 0;
     width: 100%;
